parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_3.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..22,
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    range: 0..22,
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    range: 0..22,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                                Attributed {
                                    range: 9..22,
                                    custom: (),
                                    node: FormattedValue(
                                        ExprFormattedValue {
                                            value: Attributed {
                                                range: 17..20,
                                                custom: (),
                                                node: Constant(
                                                    ExprConstant {
                                                        value: Str(
                                                            "!",
                                                        ),
                                                        kind: None,
                                                    },
                                                ),
                                            },
                                            conversion: 0,
                                            format_spec: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
    },
]
