parser/src/snapshots/rustpython_parser__string__tests__parse_fstring.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 3,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 4,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "a",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 0,
                format_spec: None,
            },
        ),
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 7,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 8,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "b",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 0,
                format_spec: None,
            },
        ),
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "{foo}",
                ),
                kind: None,
            },
        ),
    },
]
