parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_equals.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..13,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    range: 3..11,
                    custom: (),
                    node: Compare(
                        ExprCompare {
                            left: Attributed {
                                range: 3..5,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            42,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            ops: [
                                Eq,
                            ],
                            comparators: [
                                Attributed {
                                    range: 9..11,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                42,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                conversion: 0,
                format_spec: None,
            },
        ),
    },
]
