parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_not_equals.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..11,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    range: 3..9,
                    custom: (),
                    node: Compare(
                        ExprCompare {
                            left: Attributed {
                                range: 3..4,
                                custom: (),
                                node: Constant(
                                    ExprConstant {
                                        value: Int(
                                            1,
                                        ),
                                        kind: None,
                                    },
                                ),
                            },
                            ops: [
                                NotEq,
                            ],
                            comparators: [
                                Attributed {
                                    range: 8..9,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                2,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                conversion: 0,
                format_spec: None,
            },
        ),
    },
]
