parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_not_nested_spec.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 13,
            },
        ),
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 3,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 6,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "foo",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 0,
                format_spec: Some(
                    Located {
                        location: Location {
                            row: 1,
                            column: 0,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 13,
                            },
                        ),
                        custom: (),
                        node: JoinedStr(
                            ExprJoinedStr {
                                values: [
                                    Located {
                                        location: Location {
                                            row: 1,
                                            column: 0,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 1,
                                                column: 13,
                                            },
                                        ),
                                        custom: (),
                                        node: Constant(
                                            ExprConstant {
                                                value: Str(
                                                    "spec",
                                                ),
                                                kind: None,
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            },
        ),
    },
]
