parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_self_doc_prec_space.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "x   =",
                ),
                kind: None,
            },
        ),
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "",
                ),
                kind: None,
            },
        ),
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Located {
                    location: Location {
                        row: 1,
                        column: 3,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 4,
                        },
                    ),
                    custom: (),
                    node: Name(
                        ExprName {
                            id: "x",
                            ctx: Load,
                        },
                    ),
                },
                conversion: 114,
                format_spec: None,
            },
        ),
    },
]
