parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_self_doc_trailing_space.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        range: 0..10,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "x=",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..10,
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "   ",
                ),
                kind: None,
            },
        ),
    },
    Attributed {
        range: 0..10,
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    range: 3..4,
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Load,
                        },
                    ),
                },
                conversion: Int(
                    114,
                ),
                format_spec: None,
            },
        ),
    },
]
