parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_yield_expr.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    FormattedValue(
        ExprFormattedValue {
            range: 0..10,
            value: Yield(
                ExprYield {
                    range: 3..8,
                    value: None,
                },
            ),
            conversion: Int(
                0,
            ),
            format_spec: None,
        },
    ),
]
